layout issue fixed

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -29,14 +29,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-// .common-btn {
-//   @apply bg-blue-500 text-white font-bold px-8 py-3 rounded transition duration-500 ease-in-out;
-
-//   &:hover {
-//     @apply bg-blue-700 text-white font-bold rounded;
-//   }
-// }
-
 .common-btn {
   background: linear-gradient(135deg, #2b59ff 0%, #bb2bff 100%);
   color: #fff;
@@ -50,4 +42,18 @@ body {
     color: #fff;
     font-weight: 600;
   }
+}
+
+.mainHomePage {
+  background: url("../Assets/bg.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-blend-mode: overlay;
+  background-color: rgba(0, 0, 0, 0.5);
 }
